feat: relatorios